--- a/budget.tex
+++ b/budget.tex
@@ -20,7 +20,7 @@
         Xiao & Jun & 0.4625PD & Validation Experiment & SLAC\\
         \hline
     \end{tabular}
-    \caption{Senior/key personnel and institutional affiliation}
+    \caption{Senior/key personnel and institutional affiliation.}
     \label{tab:senior_key_personnel}
 \end{table}
 \begin{table}[ht]
@@ -33,10 +33,10 @@
     Lawrence Berkeley National Laboratory & \$150k & \$150k & \$150k & \$150k & \$600k \\
     SLAC National Accelerator Laboratory & \$275k & \$275k & \$275k & \$275k & \$1,100k \\
     \hline
-    Total budget & \$1,000k & \$1,000k & \$1,000k & \$1,000k & \$4,000k \\
+    Total Budget & \$1,000k & \$1,000k & \$1,000k & \$1,000k & \$4,000k \\
    \hline 
     \end{tabular}
-    \caption{Summary of budget information for lead institution and all partner institution}
+    \caption{Summary of budget information for lead institution and all partner institution.}
     \label{tab:budget}
 \end{table}
 
@@ -46,9 +46,9 @@
     \hline
         \bf Tasks/Thrusts & \bf Year 1 & \bf Year 2 & \bf Year 3 & \bf Year 4 & \bf Total Budget \\
         \hline
-        Software development & \$575k & \$575k & \$575k & \$575k & \$2,300k \\
+        Software Development & \$575k & \$575k & \$575k & \$575k & \$2,300k \\
         Interpretation & \$150k & \$150k & \$150k & \$150k & \$600k \\
-        Validation experiments/simulations & \$275k & \$275k & \$275k & \$275k & \$1,100k \\
+        Validation Experiments/Simulations & \$275k & \$275k & \$275k & \$275k & \$1,100k \\
         \hline
         Total Budget & \$1,000k & \$1,000k & \$1,000k & \$1,000k & \$4,000k \\
         \hline
