--- a/overview.tex
+++ b/overview.tex
@@ -7,7 +7,7 @@ In this context, the DOE CMS Software Center for Nonperturbative Studies of Func
 
 As of June 2021, the RT-TDDFT software named INQ has been successfully implemented and released with all of the functions necessary for calculating ground state electronic structure and time propagation. Rigorous tests for scientific research such as reproducibility of relevant physical quantities have been performed based on comparisons with well established DFT (QE/Qbox) and TDDFT (Octopus/Qb@ll) codes. Optimization on GPU-based architectures has been successfully carried out together with a MPI parallel implementation, where software design ({\bf Correa}), development ({\bf Andrade}) and testing ({\bf Pemmaraju}) efforts were closely coordinated by the PI {\bf Ogitsu} through extensive online meetings (two 2-hour meetings per week). \emph{ We have successfully executed our software development plan: INQ has achieved excellent parallel performance using multiple GPUs with standard DFT (GGA) based on the band parallelization scheme. See Figures~\ref{fig:scaling_strong} and \ref{fig:scaling_gpu_vs_cpu} on page~\pageref{fig:scaling_strong}. A comprehensive report describing the INQ code and its future extension plans has been summarized and submitted to a peer reviewed journal~\cite{andrade2021inq}.} 
 
-Current GPU-ready (TD)DFT codes focus on delivering GPU parallel performance for specific types of simulations, such as hybrid exchange-correlation (BigDFT)\cite{BigDFT2018},  GW calculations (VASP)~\cite{vasp2012,vasp2012b,vasp2018,vasp2019}, and CCSD (NWChem)~\cite{NWChem2013}. These calculations intrinsically have a high arithmetic intensity, or k-point parallelization~\cite{QE2017,QE2020} and fewer communication requirements compared to band or grid parallelization strategies. (TD)DFT simulations of realistic materials and systems often require large system sizes in order to account for factors such as defects, impurities, and interfaces. To address the length-scales required for these types of calculations, band and grid parallel schemes are more important than parallelization over k-points in minimizing time to solution. At the time of this writing, only the real space GGA (TD)DFT codes~\cite{andrade2012time,andrade2013real,SparcX2021} have taken full advantage of the computing power of parallel GPU-type architectures, which suggests that a lack of sufficient interconnect bandwidth in the current HPC platforms may pose a significant challenge to codes that are based on parallel 3D FFT routines, as 3D FFT are known to require high memory and interconnect bandwidth~\cite{heFFTe2020}. See Appendix~\ref{sec:hpc} for more detail.
+Current GPU-ready (TD)DFT codes focus on delivering GPU parallel performance for specific types of simulations, such as hybrid exchange-correlation (BigDFT)\cite{BigDFT2018},  GW calculations (VASP)~\cite{vasp2012,vasp2012b,vasp2018,vasp2019}, and CCSD (NWChem)~\cite{NWChem2013}. These calculations intrinsically have a high arithmetic intensity, or k-point parallelization~\cite{QE2017,QE2020} and fewer communication requirements compared to band or grid parallelization strategies. (TD)DFT simulations of realistic materials and systems often require large system sizes in order to account for factors such as defects, impurities, and interfaces. To address the length-scales required for these types of calculations, band and grid parallel schemes are more important than parallelization over k-points in minimizing time to solution. At the time of this writing, only the real space GGA (TD)DFT codes~\cite{andrade2012time,andrade2013real,SparcX2021} have taken full advantage of the computing power of parallel GPU-type architectures, which suggests that a lack of sufficient interconnect bandwidth in the current HPC platforms may pose a significant challenge to codes that are based on parallel 3D FFT routines, as 3D FFT are known to require high memory and interconnect bandwidth~\cite{heFFTe2020}. 
 
 Our software development strategy is comprehensive and aims to facilitate advancement of theory by highly programmable design. As such, scientists who are not expert programmers can use our software to implement newly developed theories and algorithms with ease, which will expand the user community and extend the functionality of INQ. Through communications with the scientific and HPC communities, it was suggested that the basic code design must have significant flexibility to accommodate the rapidly evolving HPC system architectures as well as the development of the RT-TDDFT theory itself. 
 
