--- a/publications.tex
+++ b/publications.tex
@@ -20,11 +20,11 @@ Collaborative publications jointly supported by this project and other programs 
 
     \item Khalid M. Siddiqui1, Daniel B. Durham, Frederick Cropp, Colin Ophus, {\bf Sangeeta Rajpurohit}, Yanglin Zhu, Johan D. Carlstr\"{o}m, Camille Stavrakas, Zhiqiang Mao, Archana Raja, Pietro Musumeci, \textcolor{blue}{Liang Z. Tan}, Andrew M. Minor, Daniele Filippetto, and Robert A. Kaindl, "Ultrafast optical melting of trimer superstructure in layered 1T’-TaTe2" submitted.  arXiv:2009.02891
 
-    \item Edbert J. Sie, Clara M. Nyby, \textcolor{blue}{C. D. Pemmaraju}, Christina A. C. Garcia11, Yaxian Wang, Burak Guzelturk, Chenyi Xia, {\bf Jun Xiao}, Andrey Poletayev, B. K. Ofori-Okai, Matthias C. Hoffmann, Su Ji Park, Xiaozhe Shen, Jie Yang, Renkai Li, Alexander H. Reid, Stephen Weathersby, Philipp Muscher, Nathan Finney, Daniel Rhodes, Luis Balicas, James Hone, William Chueh, Thomas P. Devereaux, Prineha Narang,Tony F. Heinz, Xijie Wang, \textcolor{blue}{Aaron M. Lindenberg}, "Ultrathin Terahertz Waveplate Using an Anisotropic Semimetal" under review.
+    \item Edbert J. Sie, Clara M. Nyby, \textcolor{blue}{C. D. Pemmaraju}, Christina A. C. Garcia11, Yaxian Wang, Burak Guzelturk, Chenyi Xia, {\bf Jun Xiao}, Andrey Poletayev, B. K. Ofori-Okai, Matthias C. Hoffmann, Su Ji Park, Xiaozhe Shen, Jie Yang, Renkai Li, Alexander H. Reid, Stephen Weathersby, Philipp Muscher, Nathan Finney, Daniel Rhodes, Luis Balicas, James Hone, William Chueh, Thomas P. Devereaux, Prineha Narang,Tony F. Heinz, Xijie Wang, \textcolor{blue}{Aaron M. Lindenberg}, "Ultrathin Terahertz Waveplate Using an Anisotropic Semimetal", under review.
     
     \item Ming-Fu Lin, Narendra Singh, Shujia Liang, Mianzhen Mo, Pedro Nunes, Kathryn Ledbetter, Jie Yang, Michael Kozina, Stephen Weathersby, Xiaozhe Shen, Amy Cordones-Hahn, Thomas Wolf, Kelly Gaffney, \textcolor{blue}{C. D. Pemmaraju}, Matthias Ihme, Xijie Wang, "Imaging the solvated hydronium cation and hydroxyl radical in the ionized liquid water", under review.
 
-    \item Khalid M. Siddiqui, Daniel B. Durham, Frederick Cropp, Colin Ophus, {\bf Sangeeta Rajpurohit}, Yanglin Zhu, Johan D. Carlström, Camille Stavrakas, Zhiqiang Mao, Archana Raja, Pietro Musumeci, \textcolor{blue}{Liang Z. Tan}, Andrew M. Minor, Daniele Filippetto, Robert A. Kaindl, "Ultrafast optical melting of trimer superstructure in layered 1T'-TaTe2", {\it Comm. Phys.} accepted June 8, 2021, https://arxiv.org/abs/2009.02891 
+    \item Khalid M. Siddiqui, Daniel B. Durham, Frederick Cropp, Colin Ophus, {\bf Sangeeta Rajpurohit}, Yanglin Zhu, Johan D. Carlström, Camille Stavrakas, Zhiqiang Mao, Archana Raja, Pietro Musumeci, \textcolor{blue}{Liang Z. Tan}, Andrew M. Minor, Daniele Filippetto, Robert A. Kaindl, "Ultrafast optical melting of trimer superstructure in layered 1T'-TaTe2", {\it Comm. Phys.} accepted June 8, 2021, \url{https://arxiv.org/abs/2009.02891}. 
 
     \item  {\bf Sangeeta Rajpurohit}, \textcolor{blue}{Liang Z. Tan},  Christian Jooss, and P. E. Bl\"ochl, , "Ultrafast spin-nematic and ferroelectric phase transitions induced by femtosecond light pulses", {\it Phys. Rev. B} {\bf 102}, 174430-6 (2020). Published on Nov 18, 2020.
 
