--- a/research.tex
+++ b/research.tex
@@ -17,7 +17,7 @@ Below is a summary of the software development and scientific research efforts w
 With the widespread adoption of Graphical Processing Units (GPUs) as a powerful and energy efficient~\cite{Huang2009} hardware paradigm for scientific computing and the ongoing migration of DOE's national super-computing facilities from CPU to networked hybrid CPU-GPU architectures, it is of paramount importance within computational materials science that the community has access to electronic structure codes that are fully compatible with the emerging GPU computing landscape.
 The INQ platform~\cite{Andrade2021} under development by the NPNEQ team addresses this need within the context of Density Functional Theory (DFT)-based approaches to materials simulation while further specializing to non-perturbative simulations of materials under non-equilibrum conditions.
 During the first 18 months of this funding period, the NPNEQ center accomplished the design and development tasks necessary to deliver a modular and extensible GPU-accelerated software solution for DFT/TDDFT led by LLNL PIs \textbf{Andrade} and \textbf{Correa}.
-Below we outline the unique design features of INQ as well as its current capabilities:
+Below we outline the unique design features of INQ as well as its current capabilities.
 
 \noindent{\bf General features and design:} The design philosophy of INQ differs in many important respects from established Fortran/C-based DFT/TDDFT codes developed in past decades to run on CPUs: Unlike the CPU computing model that matured decades ago, GPU computing is still rapidly evolving with different hardware designs competing for primacy in the super-computing space and vendors making significant low-level updates and optimizations on a regular basis.
 \textsc{Inq} is designed from the outset to be easily modified and improved on top of evolving hardware, while providing consistent results and behavior independent of specific vendor platforms. 
@@ -184,7 +184,7 @@ anisotropies.
 During the project period, our work on the materials system of \(\mathrm{Pr_xCa_{1-x}MnO_3}\) has resulted in the discovery of a new way to enhance the bulk photovoltaic effect by optically induced phase transitions. 
 These results, currently under review, are reported in the preprint Ref.~\cite{Rajpurohit2021}. 
 Our study provides a unified picture of the photocurrent generation and its evolution through real-time simulations, and will have a significant impact in field of the bulk photovoltaic effect (BPVE) where understanding, predicting, and ultimately controlling the photovoltaic behavior remains a challenge.
-We show theoretically that this strongly correlated oxide perovskite displays strong photocurrent enhancement when it is driven into a hidden magnetic phase transition. See Figure~\ref{fig:PCMO}.
+We show theoretically that this strongly correlated oxide perovskite displays strong photocurrent enhancement when it is driven into a hidden magnetic phase transition (See Figure~\ref{fig:PCMO}).
 This phenomenon is highly non-perturbative, and lies outside the perturbative paradigm of shift and ballistic currents used in this field. 
 The maximum photoresponsivity obtained is almost an order of magnitude higher than that reported for other transition metal oxides such as \(\mathrm{BiFeO_3}\) and \(\mathrm{BaTiO_3}\).
 
@@ -209,8 +209,8 @@ We will use GPU optimization of the \textsc{inq} code to extend these simulation
 High defect tolerance has been considered as a main reason for the long charge carrier lifetime and high photoluminescence quantum yield in bulk lead halide perovskites (LHPs). 
 On the other hand, surface defects play a critical role in determining charge carrier dynamics and optical properties, especially for LHP nanocrystals and quantum dots. Therefore, revealing the nature of surface defects and developing a strategy for their effective passivation are of strong interest. 
 {\bf Tan} and {\bf Ogitsu}, together with collaborators at UCSC~\cite{Smart2021}, have used first-principles calculations to reveal that interstitial and antisite defects in a prototypical LHP, \(\mathrm{CsPbBr_3}\), can have lower formation energy when they form at the surface instead of bulk while simultaneously creating deep trap states within the bandgap.
-We show how to choose molecular ligands to passivate these defects, eliminating trap states in favor of shallow states, which enhances photoluminescence. 
-(See Figure~\ref{fig:defect}) This work has implications for  the field of LHPs, especially LHP devices where interfacial chemistry plays an important role in the optoelectronic properties and stability.
+We show how to choose molecular ligands to passivate these defects, eliminating trap states in favor of shallow states, which enhances photoluminescence 
+(See Figure~\ref{fig:defect}). This work has implications for  the field of LHPs, especially LHP devices where interfacial chemistry plays an important role in the optoelectronic properties and stability.
 
 This work forms the basis for planned real-time simulations of lossy processes at these defects in the LHPs, such as non-radiative recombination processes and dephasing, which are of fundamental interest for optoelectronic applications. 
 Even though typical RT-TDDFT simulations are shorter than the natural time scales of these processes, it has been demonstrated that their rates can still be extracted, by using a cumulant expansion approach~\cite{Qiao2020}. 
@@ -285,7 +285,7 @@ Our work paves the way for further exploration and ultimately directed manipulat
 \subsubsection{Software Development: Functionality Addition To INQ And Beyond}
 Having validated the modern C++ based design and infrastructural aspects of \textsc{INQ} and demonstrated parallelism over hybrid CPU-GPU architectures, we aim to add functionality to the DFT/TDDFT application layer of  \textsc{INQ} with the goal of tackling emerging ultrafast materials science problems. To enable low-cost simulations of very large system sizes accessible via tight-binding (TB) models, we also plan to implement tools for automated extraction of model parameters based on real-time TDDFT simulations. This latter functionality will be developed at LBNL and interfaced with TB codes for dynamics simulations.
 
-\paragraph{Beyond adiabatic semi-local XC functionals:}  Recent developments within TDDFT have enabled accurate simulations of excitonic~\cite{Ullrich2014b, Refaely-Abramson2015a, Pemmaraju2018b} and long-range charge transfer phenomena~\cite{Kummel2017} in condensed matter systems within the framework of generalized Kohn-Sham (GKS) TDDFT and current-DFT (CDFT)~\cite{Sun2021}.  GKS theory relaxes the requirement within KS theory that the XC potential be a local multiplicative potential of the form $V_{XC}[n](\textbf{r})$ and instead allows non-local potentials $V_{XC}[\rho](\textbf{r},\textbf{r'} )$ that are often explicit functionals of the GKS one-body density matrix $\rho(\textbf{r},\textbf{r'})$~\cite{Baer2018}. Current DFT-based approaches meanwhile allow for the  encoding of excitonic effects within a time-dependent XC vector potential $A_{XC}[\textbf{j},n](r,t)$, in principle, a functional of both the density $n(\textbf{r})$ and current-density~$\textbf{j}(\textbf{r})$~\cite{Sun2021}. Both approaches are promising for  modeling excitonic effects in  functional materials such as transition metal oxides, chalcogenides and hybrid perovskite systems at a cost that is significantly lower than solving the Bethe-Salpeter Equation. GKS theory-based RT-TDDFT in particular extends to non-linear and non-perturbative light matter interactions as has been demonstrated recently in the case of pump-probe spectroscopy simulated within excitonic condensed matter systems~\cite{Pemmaraju2020}. One of the main development goals for the NPNEQ team over the next 18 months is therefore to implement beyond semi-local DFT XC functionals within $\textsc{INQ}$.  We will draw on our previous experience implementing hybrid functionals within Quantum Espresso (\textbf{PI Prendergast})~\cite{Barnes2017}, SIESTA (\textbf{PI Pemmaraju})~\cite{Pemmaraju2018b} and Octopus (\textbf{PI Andrade})~\cite{Andrade2015} while exploring the GPU adaptation within \textsc{INQ} of promising new algorithms such as the  Adaptively Compressed Exchange (ACE) low-rank representation of the Fock operator due to Lin et al~\cite{Lin2016}.   
+\paragraph{Beyond adiabatic semi-local XC functionals}  Recent developments within TDDFT have enabled accurate simulations of excitonic~\cite{Ullrich2014b, Refaely-Abramson2015a, Pemmaraju2018b} and long-range charge transfer phenomena~\cite{Kummel2017} in condensed matter systems within the framework of generalized Kohn-Sham (GKS) TDDFT and current-DFT (CDFT)~\cite{Sun2021}.  GKS theory relaxes the requirement within KS theory that the XC potential be a local multiplicative potential of the form $V_{XC}[n](\textbf{r})$ and instead allows non-local potentials $V_{XC}[\rho](\textbf{r},\textbf{r'} )$ that are often explicit functionals of the GKS one-body density matrix $\rho(\textbf{r},\textbf{r'})$~\cite{Baer2018}. Current DFT-based approaches meanwhile allow for the  encoding of excitonic effects within a time-dependent XC vector potential $A_{XC}[\textbf{j},n](r,t)$, in principle, a functional of both the density $n(\textbf{r})$ and current-density~$\textbf{j}(\textbf{r})$~\cite{Sun2021}. Both approaches are promising for  modeling excitonic effects in  functional materials such as transition metal oxides, chalcogenides and hybrid perovskite systems at a cost that is significantly lower than solving the Bethe-Salpeter Equation. GKS theory-based RT-TDDFT in particular extends to non-linear and non-perturbative light matter interactions as has been demonstrated recently in the case of pump-probe spectroscopy simulated within excitonic condensed matter systems~\cite{Pemmaraju2020}. One of the main development goals for the NPNEQ team over the next 18 months is therefore to implement beyond semi-local DFT XC functionals within $\textsc{INQ}$.  We will draw on our previous experience implementing hybrid functionals within Quantum Espresso (\textbf{PI Prendergast})~\cite{Barnes2017}, SIESTA (\textbf{PI Pemmaraju})~\cite{Pemmaraju2018b} and Octopus (\textbf{PI Andrade})~\cite{Andrade2015} while exploring the GPU adaptation within \textsc{INQ} of promising new algorithms such as the  Adaptively Compressed Exchange (ACE) low-rank representation of the Fock operator due to Lin et al~\cite{Lin2016}.   
 
 \paragraph{ Non-collinear magnetism and spin-orbit coupling} Time-dependent DFT for magnetic systems is intrinsically a theory of non-collinear spins wherein the XC magnetic field couples to Pauli two component spinors in the KS Hamiltonian~\cite{Krieger2015}. Furthermore, in the context of modern condensed matter applications such as laser-induced magnetization dynamics, carrier dynamics in hybrid perovskite systems and the non-linear response of topological materials spin-orbit (SO) coupling plays a critical role. We will therefore extend the RT-TDDFT time propagation functionality in \textsc{INQ} to the Breit-Pauli Hamiltonian in the two component spinor algebra~\cite{Breit1932} in order to provide a fully generic description of SO coupling without projective approximations that depend on ionic positions. In particular, we will implement the TDDFT equivalent of the Breit-Pauli Hamiltonian due to Krieger \textit{et al}~\cite{Krieger2015} which enters the time-dependent KS equation
 \begin{equation*}
@@ -294,7 +294,7 @@ i\frac{\partial\Psi_i(\textbf{r},t)}{\partial t} = [ \frac{1}{2} ( -i\nabla + \f
 where the last term indicates the SO coupling. The generic formulation we propose to implement is well suited to studying the coupled dynamics of charge-spin-orbital-lattice degrees of freedom in the non-perturbative regime.  
   
 
-\paragraph{Spiral boundary conditions:}
+\paragraph{Spiral boundary conditions}
 Understanding the role of both thermal and light-driven spin-fluctuations is a topic of increasing interest in materials science. With advances in the ability to experimentally probe magnon spectra using inelastic X-ray spectroscopy~\cite{Haverkort2010}, the potential for non-linear manipulation of spin excitations in the THz regime~\cite{Kampfrath2011} and the emergence of anti-ferromagnetic spintronics~\cite{Baltz2018}, there is a growing demand for \textit{ab initio} theoretical simulations in this area. Describing magnon excitations at finite wave-vectors requires either the use of large supercells or alternatively twisted boundary conditions with the generalized Bloch framework. The latter approach is particularly attractive for time-domain non-perturbative simulations of magnons in periodic systems as has been recently demonstrated~\cite{Tancogne-Dejean2020}. Within the group of PI Lindenberg at SLAC, there is ongoing and planned experimental activity investigating spin dynamics in layered antiferromagnets as outlined in the next section. In order to make direct contact with these experimental studies, we will implement within \textsc{INQ} the time-dependent version of the general Bloch theorem of Sandratskii~\cite{Sandratskii1986} recently outlined by N. Tancogne-Dejean et al~\cite{Tancogne-Dejean2020}. 
 
 \paragraph{Beyond Ehrenfest dynamics}
@@ -305,14 +305,14 @@ A variety of proposed dynamics departing from BI and \emph{beyond} Ehrenfest wou
 For example, it has been noted recently that friction terms can be added \emph{ab initio} to model electron-phonon coupling with classical ions.
 These dissipative terms can be calculated on-the-fly by launching \emph{tangential} short TDDFT simulations (in parallel to the main trajectory evolution).
 The dissipative contributions can then be added to the Newton's equation of motion by terms in the form of \(M \ddot{\vec{R}} = \vec{F}_\text{BO} - \beta\dot{\vec{R}} + \vec{\xi}\), where \(\beta\) and \(\xi\) are a friction tensor and correlated noise, respectively~\cite{Tamm2018}.
-This formulation is being tested by not only calculating a certain \emph{limit} of electronic stopping power (\(\beta\)) of the same atoms that form the crystal (or a liquid) but also by calculating the corresponding excited-state force fluctuations (\(\xi\)) via TDDFT (Fig.~\ref{fig:stopping_eph} in page~\pageref{fig:stopping_eph}).\label{page:stopping_eph}
+This formulation is being tested by not only calculating a certain \emph{limit} of electronic stopping power (\(\beta\)) of the same atoms that form the crystal (or a liquid) but also by calculating the corresponding excited-state force fluctuations (\(\xi\)) via TDDFT (Fig.~\ref{fig:stopping_eph} on page~\pageref{fig:stopping_eph}).\label{page:stopping_eph}
 
 
 
 \paragraph{Interfacing \textsc{INQ} with tight-binding codes}\label{sec:future-tb}
 
 We plan to use \textsc{inq} in combination with our tight-binding dynamics code (Section.~\ref{sec:tight-binding}) for parameter extraction and for identification of the relevant degrees of freedom to be retained in these downfolded models. 
-Having a well-defined interface for these tasks will accelerate projects of the sort described in Sections~\ref{sec:tight-binding},~\ref{sec:BPVE}. Dynamical Wannierization along TDDFT trajectories will provide Hamiltonian matrix elements for the construction of these models, generalizing an approach previously taken for Wannierization along classical MD trajectories~\cite{Abramovitch2021}. 
+Having a well-defined interface for these tasks will accelerate projects of the sort described in Sections~\ref{sec:tight-binding} and ~\ref{sec:BPVE}. Dynamical Wannierization along TDDFT trajectories will provide Hamiltonian matrix elements for the construction of these models, generalizing an approach previously taken for Wannierization along classical MD trajectories~\cite{Abramovitch2021}. 
 These script-heavy workflows will be greatly simplified in \textsc{inq}, which will include a language-level interface to the \textsc{Wannier90} library~\cite{Mostofi2008}. 
 Other types of script-heavy workflows, especially those with high throughput aspects, will benefit similarly from the modularity of \textsc{inq}, which makes scripting and post-processing obsolete in favor of programmability within the single-language \textsc{inq} framework.
 
